# homework-11

./: .gitignore  README.md  conf.py  index.rst  pyproject.toml
alembic/: env.py
alembic/versions/: 78386134d708_initial_migration.py
app/: __init__.py  auth.py  cloudinary_service.py  database.py  email.py  main.py  models.py  schemas.py
app/routers/: contacts.py  reset_password.py  users.py
docs/source/: app.rst  conf.py  index.rst
tests/: test_auth.py  test_cloudinary_service.py  test_contacts.py  test_crud.py  test_database.py  test_email.py  test_functional.py  test_main.py  test_models.py  test_reset_password.py  test_users.py  test_utils.py
